--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,14 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // datastore
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    // decode JWT
+    implementation 'com.auth0.android:jwtdecode:2.0.1'
     // coil
     implementation "io.coil-kt:coil-compose:2.1.0"
+    //form builder
+    implementation 'com.github.jkuatdsc:form-builder:1.0.5'
     //firebase cloud messaging
     //implementation platform("com.google.firebase:firebase-bom:29.3.1")
     implementation "com.google.firebase:firebase-analytics-ktx"
