--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,12 @@ buildscript {
     dependencies {
 //        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
     }
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
