--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     // datastore
-    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
     // decode JWT
     implementation 'com.auth0.android:jwtdecode:2.0.1'
     // coil
