--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,9 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".views.petugas.PetugasActivity"
-            android:screenOrientation="portrait" />
+            android:name=".views.petugas.PetugasActivity"/>
         <activity
-            android:name=".views.anggota.AnggotaActivity"
-            android:screenOrientation="portrait" />
+            android:name=".views.anggota.AnggotaActivity"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
