Koleksi, inysaallah fix
Lanjut next

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     // Declare the dependency for the Cloud Storage library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-storage-ktx'
+    // generate QRCode
+    implementation 'com.google.zxing:core:3.4.1'
 }
