--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
     // generate QRCode
     implementation 'com.google.zxing:core:3.4.1'
+
+    def camerax_version = "1.0.2"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:1.0.0-alpha29"
+
+    //Barcode
+    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
+    //Camera Permission
+    implementation "com.google.accompanist:accompanist-permissions:0.19.0"
 }
