--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
     dependencies {
 //        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
+        classpath 'com.google.gms:google-services:4.3.13'
     }
     repositories {
         google()
@@ -12,6 +13,8 @@ buildscript {
     }
 
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
